--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -37,3 +37,17 @@ p {
  @include fontP1;
  margin: 0;
 }
+
+ol{ 
+	liste-style :none; 
+	padding: 0;
+	li {
+		display :inline-block;
+		&:not(:last-child) {
+			&::after {
+				content:'>';
+				padding: 0 0 0 5px;
+			}
+		}
+	}
+}
