--- a/scss/components/_animation.scss
+++ b/scss/components/_animation.scss
@@ -2,49 +2,74 @@
 
 .burger-menu {
   position: relative;
-  width: 40px;
-  height: 40px;
+  width: 20px;
+  height: 20px;
   cursor: pointer;
   margin: auto;
   margin-bottom: 25px;
+  margin-top: 23px;
+  @media (min-width: 768px){
+    width: 40px;
+    height: 40px;
+    margin-top: auto;
+  }
 }
 .burger {
   position: absolute;
-  background: $dark-grey;
+  background: $white;
   width: 100%;
-  height: 5px;
+  height: 2.5px;
   top: 50%;
   right: 0px;
   margin-top: -5px;
   opacity: 1;
+  @media (min-width: 768px){
+    background: $dark-grey;
+    height: 5px;
+  }
 }
-.burger:before {
+.burger::before {
   position: absolute;
-  background: $dark-grey;
-  width: 40px;
-  height: 5px;
-  top: 12px;
+  background: $white;
+  width: 20px;
+  height: 2.5px;
+  top: 8px;
   content: "";
   display: block;
+  @media (min-width: 768px){
+    background: $dark-grey;
+    width: 40px;
+    height: 5px;
+    top: 12px;
+  }
 }
-.burger:after {
+.burger::after {
   position: absolute;
-  background: $dark-grey;
-  width: 40px;
-  height: 5px;
-  bottom: 12px;
+  background: $white;
+  width: 20px;
+  height: 2.5px;
+  bottom: 8px;
   content: "";
   display: block;
+  @media (min-width: 768px){
+    background: $dark-grey;
+    width: 40px;
+    height: 5px;
+    bottom: 12px;
+  }
 }
-.burger:after, .burger:before, .burger {
+.burger::after, .burger::before, .burger {
   @include transition(all .3s ease-in-out);
 }
-.more-menu.active .burger-menu .burger:after{
+.more-menu.active .burger-menu .burger{
+   background: $dark-grey;
+}
+.more-menu.active .burger-menu .burger::after{
    @include transform(rotate(-45deg));
   	bottom: 0px;
    background: white;
 }
-.more-menu.active .burger-menu .burger:before{
+.more-menu.active .burger-menu .burger::before{
    @include transform(rotate(45deg));
   top: 0px;
   background: white;
@@ -65,7 +90,7 @@
 .animated-button {
     position: relative;
     @include transition(all 0.4s cubic-bezier(0.42, 0, 0.58, 1));
-    &:before {
+    &::before {
 	    display: block;
 	    position: absolute;
 	    top: 0px;
@@ -81,7 +106,7 @@
     &:hover {
     	color: white !important;
     	background-color: transparent;
-    	&:before {
+    	&::before {
 	    	left: 0%;
 			right: auto;
 			width: 100%;
