--- a/scss/helpers/_mixins.scss
+++ b/scss/helpers/_mixins.scss
@@ -35,3 +35,11 @@
     -webkit-transition: $transition;
     transition:         $transition;
 }
+
+@mixin rotate($degrees) {
+    -webkit-transform: rotate($degrees);
+    -moz-transform: rotate($degrees);
+    -ms-transform: rotate($degrees);
+    -o-transform: rotate($degrees);
+    transform: rotate($degrees);
+}
