--- a/scss/page/_home.scss
+++ b/scss/page/_home.scss
@@ -4,21 +4,34 @@
 	#intro {
 		background-color: white;
 		.backgroung-img-intro {
-			@include col(7);
-			@include inline-flex;
+			@media (min-width: 768px){
+				@include col(7);
+				@include inline-flex;
+			}
 			img {
 				width: 100%;
 			}
 		}
 		.intro-wrap-content {
-			@include col(5);
+			@media (min-width: 768px){
+				@include col(5);
+			}
 			.title-intro-content {
 				background-color: white;
 				position: relative;
-				display: inline-block;
-				left: -110px;
-				margin-right: -110px;
-				padding: 30px;
+				margin: 0 20px;
+				padding: 0 14px;
+				padding-top: 10px;
+				bottom: 40px; 
+				margin-bottom: -40px;
+				@media (min-width: 768px){
+					display: inline-block;
+					left: -110px;
+					margin-right: -110px;
+					padding: 30px;
+					bottom: 0;
+					margin-bottom: 0;
+				}
 				.sub-title {
 					font-size:14px;
 					color: $charcoal-grey;
@@ -27,7 +40,12 @@
 				}
 			}
 			.intro-content {
-				padding-left: 30px;
+				padding: 0 34px;
+				padding-bottom: 34px;
+				@media (min-width: 768px){
+					padding: 0;
+					padding-left: 30px;
+				}
 			}
 		}
 	}
